# Sycl_Cython

./: CMakeLists.txt  README.md  add.cpp  cmake_install.cmake  hipsycl-config.cmake  setup.py  try-after-install.py
cpp/: CMakeLists.txt  hipsycl-config-version.cmake
cpp/src/: CMakeLists.txt  add.cpp
py/: setup.py  try-after-install.py
py/cy/cymodule/: interface.pyx
